Fixed the spacing issue with footer social links

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ img {
     justify-content: flex-end;
     width: 50%;
     max-width: none;
-    margin: 0;
+    margin: 0 0 2rem;
   }
 
   .footer-social img {
